bugfix for cell display on mobile safari

--- a/minesweeper/minesweeper.css
+++ b/minesweeper/minesweeper.css
@@ -61,13 +61,15 @@ body {
     white-space: nowrap;
 }
 .cell {
-    background: #EEE;
+    width: 1.5em;
+    height: 1.5em;
+    border: 1px solid black;
+    margin: 0;
+    padding: 0;
     font-size: 1.2em;
-    width: 30px;
-    height: 30px;
     text-align: center;
     vertical-align: bottom;
-    border: 1px solid black;
+    background: #EEE;
 }
 .cell:hover {
     background: #CCC;
@@ -127,8 +129,8 @@ body {
     }
     .cell {
         font-size: 1.4em;
-        width: 40px;
-        height: 40px;
+        width: 1.8em;
+        height: 1.8em;
     }
     #instructions h2 {
         margin-left: 0;
